Add some accelerometer info

--- a/teoricas/teorica_03/src/imu.tex
+++ b/teoricas/teorica_03/src/imu.tex
@@ -114,5 +114,18 @@
 
 \begin{frame}
     \frametitle{Acelerómetro}
+    
+    \begin{block}{Principio de Funcionamiento}
+        Mide la aceleración midiendo el cambio en la capacitancia. Su microestructura se parece a esto. Tiene una masa unida a un resorte que se limita a moverse en una dirección y placas exteriores fijas. Entonces, cuando se aplicará una aceleración en la dirección particular, la masa se moverá y la capacitancia entre las placas y la masa cambiará. Este cambio de capacitancia será medido, procesado y corresponderá a un valor de aceleración particular.
+    \end{block}
+    
 
+        
+    \begin{itemize}
+        \item Introceptivo
+        \item Pasivo
+        \item Mide aceleración
+        \item Unidad de medición $\si{\meter\over\square\second}$
+    \end{itemize}
+    
 \end{frame}
