--- a/teoricas/teorica_03/src/imu.tex
+++ b/teoricas/teorica_03/src/imu.tex
@@ -115,6 +115,19 @@
 \begin{frame}
     \frametitle{Acelerómetro}
     
+        \begin{figure}[!h]
+    	\centering
+    	\subfloat[]
+    	{
+    		\includegraphics[width=0.5\columnwidth]{images/accelerometer_mems.pdf}
+    	}
+    	\subfloat[]
+    	{
+    		\includegraphics[width=0.5\columnwidth]{images/accelerometer_mems2.pdf}
+    	}
+    \end{figure}
+    
+    
     \begin{block}{Principio de Funcionamiento}
         Mide la aceleración midiendo el cambio en la capacitancia. Su microestructura se parece a esto. Tiene una masa unida a un resorte que se limita a moverse en una dirección y placas exteriores fijas. Entonces, cuando se aplicará una aceleración en la dirección particular, la masa se moverá y la capacitancia entre las placas y la masa cambiará. Este cambio de capacitancia será medido, procesado y corresponderá a un valor de aceleración particular.
     \end{block}
