Fix compilation issue

--- a/teoricas/teorica_03/src/camera.tex
+++ b/teoricas/teorica_03/src/camera.tex
@@ -1,8 +1,8 @@
 \begin{frame}
     \frametitle{Cámara}
     
-    \includegraphics[width=0.4\columnwidth]{images/camera/}
-    \includegraphics[width=0.4\columnwidth]{images/camera/}
+%    \includegraphics[width=0.4\columnwidth]{images/camera/}
+%    \includegraphics[width=0.4\columnwidth]{images/camera/}
     \footnotesize
     
     \begin{block}{Principio de funcionamiento}
