--- a/teoricas/teorica_01/src/tools.tex
+++ b/teoricas/teorica_01/src/tools.tex
@@ -8,7 +8,8 @@
         \item Git: versionador
         \item Docker: contenedor
         \item VScode: IDE de desarrollo
-        \item Latex/Lyx
+        \item Latex/Lyx: escritura de informes o papers
+        \item Mendeley: manejador de papers
     \end{itemize}
 
 \end{frame}
