--- a/teoricas/teorica_03/src/laser.tex
+++ b/teoricas/teorica_03/src/laser.tex
@@ -1,6 +1,10 @@
 \begin{frame}
     \frametitle{Láser 2D}
 
+    \note{https://cdn.sick.com/media/docs/3/43/443/operating_instructions_lms1104c_111031s01_2d_lidar_sensors_en_im0079443.pdf}
+    
+    \includegraphics[width=0.4\columnwidth]{images/lidar_example.}
+
 \end{frame}
 
 \begin{frame}
