--- a/teoricas/teorica_03/src/laser.tex
+++ b/teoricas/teorica_03/src/laser.tex
@@ -4,6 +4,13 @@
     \note{https://cdn.sick.com/media/docs/3/43/443/operating_instructions_lms1104c_111031s01_2d_lidar_sensors_en_im0079443.pdf}
     
     \includegraphics[width=0.4\columnwidth]{images/lidar_example.}
+    
+    \begin{itemize}
+        \item Introceptivo
+        \item Activa
+        \item Mide distancia y ángulo
+        \item Unidad de medición $\si{\degree\second}$ o Revoluciones por Minuto (RPM)
+    \end{itemize}
 
 \end{frame}
 
