Add lidar 3d slide

--- a/teoricas/teorica_03/src/laser.tex
+++ b/teoricas/teorica_03/src/laser.tex
@@ -56,6 +56,11 @@
 \end{frame}
 
 \begin{frame}
-    \frametitle{Láser 3D}
+    \frametitle{LiDAR 3D}
+
+    \begin{figure}[!h]
+        \centering
+        \includegraphics[width=\columnwidth]{images/lidar3d.png}
+    \end{figure}
 
 \end{frame}
