Add sensor_table pdf

--- a/teoricas/teorica_03/slides.tex
+++ b/teoricas/teorica_03/slides.tex
@@ -74,9 +74,15 @@
 
 \input{src/camera.tex}
 
+\input{src/time_of_flight.tex}
+
 \input{src/laser.tex}
 
 \input{src/sonar.tex}
+
+\input{src/optical_triangulation.tex}
+
+\input{src/structured_light.tex}
 
 \input{src/gnss.tex}
 
