--- a/teoricas/teorica_03/src/sensors.tex
+++ b/teoricas/teorica_03/src/sensors.tex
@@ -19,7 +19,14 @@
 
 \begin{frame}
     \frametitle{Sensores}
-    \TODO{poner tabla 4.1 del libro siegwart}
+    \note{tabla 4.1 del libro siegwart}
+    
+        
+    \begin{figure}[!h]
+        \centering
+        \includegraphics[height=0.9\textheight]{images/sensors_table.pdf}
+    \end{figure}
+    
 
 \end{frame}
 
