--- a/teoricas/teorica_03/src/laser.tex
+++ b/teoricas/teorica_03/src/laser.tex
@@ -16,11 +16,11 @@
     
     \begin{figure}[!h]
         \centering
-        \includegraphics[width=\columnwidth]{images/lidar_concept.pdf}
+        \includegraphics[width=0.8\columnwidth]{images/lidar_concept.pdf}
     \end{figure}
     \footnotesize
     \begin{block}{Principio de funcionamiento}
-     Un LiDAR (\emph{Light Detection And Ranging}) emite pulsos de luz mediante un diodo láser (infrarrojo). Si el rayo láser es reflejado por un objeto, el rayo reflejado es recibido por el sensor.
+     Un LiDAR (\emph{Light Detection And Ranging}) o Laser Rangefinder emite pulsos de luz mediante un diodo láser (infrarrojo). Si el rayo láser es reflejado por un objeto, el rayo reflejado es recibido por el sensor.
      
      La distancia al objeto se calcula en base al tiempo que el haz de luz pulsada requiere para ser reflejada y recibida por el sensor.
     \end{block}
