Add several sensor images

--- a/teoricas/teorica_03/src/event_camera.tex
+++ b/teoricas/teorica_03/src/event_camera.tex
@@ -1,4 +1,12 @@
 \begin{frame}
     \frametitle{Cámara basada en eventos}
+    
+    
+    \TODO{Event based camera video}
+    
+    \begin{figure}[!h]
+        \centering
+        \includegraphics[width=\columnwidth]{images/event_camera.png}
+    \end{figure}
 
 \end{frame}
