--- a/teoricas/teorica_03/src/laser.tex
+++ b/teoricas/teorica_03/src/laser.tex
@@ -16,7 +16,8 @@
     
     \begin{figure}[!h]
         \centering
-        \includegraphics[width=0.8\columnwidth]{images/lidar_concept.pdf}
+        \includegraphics[width=0.6\columnwidth]{images/lidar_concept.pdf}
+        \includegraphics[width=0.35\columnwidth]{images/lidar.pdf}
     \end{figure}
     \footnotesize
     \begin{block}{Principio de funcionamiento}
@@ -29,7 +30,7 @@
         \item Extereoceptivo
         \item Activo
         \item Mide distancia y ángulo a cada punto (coordenadas polares)
-        \item Unidad de medición $\si{\degree\second}$ o Revoluciones por Minuto (RPM)
+        \item Unidad de medición $(\si{\meter},\si{\degree})$
     \end{itemize}
 
     \note{Información extraida de:  https://cdn.sick.com/media/docs/3/43/443/operating_instructions_lms1104c_111031s01_2d_lidar_sensors_en_im0079443.pdf}
