--- a/teoricas/teorica_03/src/sensors.tex
+++ b/teoricas/teorica_03/src/sensors.tex
@@ -30,3 +30,18 @@
 
 \end{frame}
 
+
+
+\begin{frame}
+    \frametitle{TODOs generales}
+    \TODO{agregar a cada sensor una imagen de un sensor real}
+    
+    \begin{figure}[!h]
+        \centering
+        \includegraphics[height=0.9\textheight]{images/sensors_table.pdf}
+    \end{figure}
+    
+\end{frame}
+
+
+
