--- a/teoricas/teorica_03/src/structured_light.tex
+++ b/teoricas/teorica_03/src/structured_light.tex
@@ -6,9 +6,6 @@
         \includegraphics[width=0.5\columnwidth]{images/structured_light.pdf}
     \end{figure}
 
-    La luz estructurada (\emph{structured light}) es el proceso de proyectar un patrón conocido de píxeles (ocasionalmente rejillas o barras horizontales) en una escena. La manera en que dicho patrón se deforma cuando golpea distintas superficies permite a los sistemas de visión calcular la profundidad e información de la superficie de los objetos en la escena
-    
-
-     
+    La luz estructurada (\emph{structured light}) es el proceso de proyectar un patrón conocido de píxeles (ocasionalmente rejillas o barras horizontales) en una escena. La manera en que dicho patrón se deforma cuando golpea distintas superficies permite a los sistemas de visión calcular la profundidad e información de la superficie de los objetos en la escena.
     
 \end{frame}
