Add optical triangulation image

--- a/teoricas/teorica_03/src/bumper.tex
+++ b/teoricas/teorica_03/src/bumper.tex
@@ -1,4 +1,9 @@
 \begin{frame}
     \frametitle{Bumper}
+    
+    \begin{figure}[!h]
+        \centering
+        \includegraphics[width=0.4\columnwidth]{images/bumper.png}
+    \end{figure}
 
 \end{frame}
