--- a/teoricas/teorica_03/src/optical_triangulation.tex
+++ b/teoricas/teorica_03/src/optical_triangulation.tex
@@ -1,4 +1,10 @@
 \begin{frame}
     \frametitle{Sensor de triangulación óptica}
+
+    \begin{figure}[!h]
+    \centering
+    \includegraphics[width=0.7\columnwidth]{images/optical_triangulation.pdf}
+    \includegraphics[width=0.25\columnwidth]{images/optical_triangulation.png}
+    \end{figure}
     
 \end{frame}
