--- a/teoricas/teorica_03/src/time_of_flight.tex
+++ b/teoricas/teorica_03/src/time_of_flight.tex
@@ -1,4 +1,5 @@
 \begin{frame}
     \frametitle{Cámara Time of Flight}
     
+    funciona de manera similar a un lidar con la ventaja de que toda la escena 3D se captura al mismo tiempo y que no hay partes móviles. Este dispositivo utiliza una fuente de luz infrarroja modulada para determinar la distancia de cada píxel de un sensor Photonic Mixer Device (PMD).
 \end{frame}
