Add camera pin-hole slides

--- a/teoricas/teorica_02/slides.tex
+++ b/teoricas/teorica_02/slides.tex
@@ -40,11 +40,11 @@
 % Color commands for annotations
 \newcommand\TODO[1]{\textbf{\textcolor{red}{#1}}} %  TODO notes
 
-\input{./src/math_preamble}
+\input{../../common/math_preamble}
 
 % add bibliography resource
 \renewcommand*{\bibfont}{\footnotesize} % change bibliograhy size
-\bibliography{./src/bibliography.bib}
+\bibliography{../../common/bibliography.bib}
 
 % Graphic paths
 \graphicspath{{./images/}}
