--- a/teoricas/teorica_03/slides.tex
+++ b/teoricas/teorica_03/slides.tex
@@ -42,13 +42,13 @@
 
 % add bibliography resource
 \renewcommand*{\bibfont}{\footnotesize} % change bibliograhy size
-\bibliography{./src/bibliography.bib}
+\bibliography{../../common/bibliography.bib}
 
 % Graphic paths
 \graphicspath{{./images/}}
 
 % add math preamble
-\input{./src/math_preamble}
+\input{../../common/math_preamble}
 
 \title{Sensores}
 \author{}
@@ -89,5 +89,8 @@
 \input{src/gps_rtk.tex}
 
 \input{src/event_camera.tex}
+
+\section{Bibliografía}
+\input{src/bibliography.tex}
 
 \end{document}
